Updated the basic functionality of JS

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <section>
-       <section>
-            <h1 class="main-page-heading">About Myself</h1>
+       <section onmouseover="colorChange()" onmouseout="normalColor()">
+            <h1 id="main-page-heading" class="main-page-heading">About Myself</h1>
             <h2 class="subtitle">Introduction</h2>
             <p class="paragraph-text">My name is <em>Manal Solanki</em>.I have completed my bachelors in <strong>Computer Engineering</strong> from India.In terms of work prospective in my field  , I have done an internship under which I have worked with BOOTSTRAP STUDIO.
                 Apart from this I have basic knowledge of :
@@ -40,8 +40,8 @@
             <p class="paragraph-text">I would like to learn more about animation and designing related to mobile applications.</p>
         </section>
     
-    </section>    
-    
+    </section>   
+    <script src="javascript/index.js"></script>
 </body>
 
 </html>
